# mit-ub

./: .clang-format  .gitignore  Dockerfile  Makefile  README.md  atomic_add.ipynb  ffdm.txt  package-lock.json  plotly.ipynb  process_density.py  pyproject.toml  setup.py
.circleci/: config.yml
config/: convnext.yaml  density.yaml  distill.yaml  mjepa.yaml  mjepa_adaptive.yaml  ssl_pretrain.yaml  supervised.yaml  triage.yaml  view.yaml
config/adaptive_mammo_large/: mjepa_2048_1536.yaml  mjepa_3072_2304.yaml  mjepa_512_384.yaml  mjepa_triage.yaml  mjepa_triage_cont.yaml
config/chexpert/: chexpert_triage.yaml  mjepa_2048_2048.yaml  mjepa_512_512.yaml
config/cifar10/: cifar10.yaml  cifar10_convnext.yaml  cifar10_distill.yaml  cifar10_distill_tune.yaml  cifar10_finetune.yaml  cifar10_finetune_wjepa.yaml  cifar10_lora.yaml  cifar10_ssl.yaml  cifar10_ssl_adaptive.yaml  cifar10_ssl_adaptive_from_vanilla.yaml
config/cifar10/autocast/: bf16-baseline.yaml
config/cifar10/lr/lr=1e-3/: lr=1e-4_bs=128.yaml  lr=1e-4_bs=16.yaml  lr=1e-4_bs=256.yaml  lr=1e-4_bs=32.yaml  lr=1e-4_bs=512.yaml  lr=1e-4_bs=64.yaml
config/cifar10/lr/lr=1e-4/: lr=1e-4_bs=128.yaml  lr=1e-4_bs=16.yaml  lr=1e-4_bs=256.yaml  lr=1e-4_bs=32.yaml  lr=1e-4_bs=512.yaml  lr=1e-4_bs=64.yaml
config/diffusion/: mjepa_2048_1536.yaml
config/mammo/: convnext_baseline.yaml
config/vindr/: vindr_base_p1.yaml
csrc/: conv.cu  conv.cuh  invert.cu  mixup.cu  noise.cu  patch.cpp  posterize.cu
docs/manim/: vit.py
docs/tikz/: adaptive.tex  backbone.tex  jepa.tex  macros.tex  position.tex
mit_ub/: __init__.py  helpers.py  profile.py  tokens.py
mit_ub/callbacks/: __init__.py  histogram.py  input.py  lora.py  mae.py  model_checkpoint.py
mit_ub/data/: __init__.py  augment.py  chexpert.py  cifar10.py  cifar100.py  datamodule.py  dynamic_range.py  invert.py  mixup.py  noise.py  posterize.py  rotation.py  triage.py  vindr.py
mit_ub/metrics/: __init__.py  cosine_sim.py  distance.py  layer_scale.py
mit_ub/model/: __init__.py  activations.py  adaptive_tokenizer.py  attention.py  backbone.py  compile.py  config.py  conv.py  gqa.py  head.py  helpers.py  layer_scale.py  lora.py  mlp.py  pool.py  pos_enc.py  soft_moe.py  transformer.py
mit_ub/model/backbone/: __init__.py  adaptive_vit.py  convnext.py  convvit.py  navit.py  s3.py  two_stage.py  vit.py  vit_te.py
mit_ub/model/convnext/: __init__.py  convnext.py
mit_ub/model/kernels/: __init__.py  benchmark.py  distance.py  flash_attn.py  helpers.py
mit_ub/model/kernels/attention/: __init__.py  __main__.py  kernel.py  module.py
mit_ub/model/kernels/distance/: __init__.py  __main__.py  kernel.py
mit_ub/model/kernels/relu2/: __init__.py  __main__.py  kernel.py  module.py
mit_ub/model/layers/: __init__.py  attention.py  convnext.py  cpu.py  layer_scale.py  mlp.py  patch_embed.py  pool.py  pos_enc.py  soft_moe.py  stochastic_depth.py  transformer.py
mit_ub/model/stem/: __init__.py  adaptive_tokenizer.py  patch_embed.py
mit_ub/tasks/: __init__.py  chexpert.py  classification.py  contrastive.py  density.py  diffusion.py  distillation.py  helpers.py  jepa.py  mae.py  student_teacher.py  triage.py  view.py  view_pos.py
mitub_rev2_density/: config.json
scripts/: plot_schedule.py
tests/: conftest.py  test_config.py  test_profile.py  test_tokens.py  test_version.py
tests/test_callbacks/: test_lora_callback.py  test_model_checkpoint.py
tests/test_data/: test_augment.py  test_chexpert.py  test_chexpert_data.py  test_cifar10.py  test_cifar100.py  test_datamodule.py  test_dynamic_range.py  test_invert.py  test_mixup.py  test_noise.py  test_posterize.py
tests/test_kernels/: test_depthwise_separable_conv.py  test_noise_kernel.py
tests/test_metrics/: test_cosine_sim.py  test_distance.py
tests/test_model/: test_adaptive_tokenizer.py  test_attention.py  test_backbone.py  test_conv.py  test_convnext.py  test_gqa.py  test_layer_scale.py  test_lora.py  test_mlp.py  test_pool.py  test_pos_enc.py  test_soft_moe.py  test_transformer.py
tests/test_model/test_backbone/: test_adaptive_vit.py  test_convnext_backbone.py  test_convvit.py  test_navit.py  test_s3.py  test_two_stage.py  test_vit.py  test_vit_te.py
tests/test_model/test_kernels/: test_distance.py  test_flash_attn.py  test_relu2.py
tests/test_model/test_layers/: test_attention.py  test_convnext.py  test_cpu.py  test_layer_scale.py  test_mlp.py  test_patch_embed.py  test_pool.py  test_pos_enc.py  test_soft_moe.py  test_stochastic_depth.py  test_transformer.py
tests/test_model/test_stem/: test_adaptive_tokenizer.py  test_patch_embed.py
tests/test_tasks/: conftest.py  test_chexpert.py  test_classification.py  test_contrastive.py  test_density.py  test_diffusion.py  test_distillation.py  test_jepa.py  test_mae.py  test_student_teacher.py  test_triage.py  test_view_pos.py
