[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mit-ub"
description = ""
requires-python = ">=3.11,<3.13"
authors = [
    {name = "Scott Chase Waggener", email = "tidalpaladin@protonmail.com"},
]
dependencies = [
    "torch",
    "torchvision",
    "einops",
    "ninja",
    "convnext @ git+https://github.com/TidalPaladin/convnext.git",
    "vit @ git+https://github.com/TidalPaladin/vit.git",
]
readme = "README.md"
license = {text = "Apache"}
dynamic = ["version"]

[project.optional-dependencies]
train = [
  "Pillow",
  "pandas",
  "pytorch-lightning>=2.4",
  "torchmetrics",
  "jsonargparse[signatures]",
  "deep-helpers @ git+https://github.com/TidalPaladin/deep-helpers.git",
  "pytorch-optimizer",
]
[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6,E203"
in-place = true
recursive = true
aggressive = 3

[tool.black]
line-length = 120

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = false

[tool.pyright]
include = ["mit_ub", "tests"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.pytest_cache",
]
pythonVersion = "3.11"
pythonPlatform = "Linux"

[tool.pdm]
version = { source = "scm" }

[tool.setuptools.packages]
find = { include = ["mit_ub", "mit_ub.*", "mit_ub/**/*", "csrc"] }

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-env",
    "coverage",
]
quality = [
    "autoflake",
    "autopep8",
    "black",
    "flake8",
    "isort",
    "clang-format>=19.1.7",
]

[tool.pytest.ini_options]
markers = [
  "ci_skip",
  "slow",
  "cuda",
]
filterwarnings = [
  "ignore:.*Reducing precision for BF16 inputs is slower than full precision.*:UserWarning",
  "ignore:.*Trying to infer the `batch_size` from an ambiguous collection.*:UserWarning",
  "ignore:.*The ``compute`` method of metric .* was called before the.*:UserWarning",
  "ignore:.*does not have many workers which may be a bottleneck.*:UserWarning",
  "ignore:.*GPU available but not used.*:UserWarning",
  "ignore:.*Invalid value for VR UI.*:UserWarning",
  "ignore:.*The length of the pixel data in the dataset .* indicates it contains excess padding.*:UserWarning",
  "ignore:.*samples in targets,.*"
]

[tool.pytest_env]
TRITON_DEBUG = "1"
TORCH_LOGS = "recompiles,dynamic"
TORCH_COMPILE = "0"
TORCH_COMPILE_MAX_AUTOTUNE = "0"

[tool.coverage.run]
omit = [
    "mit_ub/data/rotation.py",
    "mit_ub/model/gqa.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@triton.jit"
]



# Sample script config
[project.scripts]
train = "deep_helpers.cli:main"
triage = "mit_ub.tasks.triage:entrypoint"
